2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/flockfile.c, libcsupport/src/ftrylockfile.c,
	libcsupport/src/funlockfile.c: 
	Add __attribute__((unused)) to unused function parameters.

2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/envlock.c: Build conditionally.
	* configure.ac: Check for envlock.h.
	Check for decls of __env_lock, __env_unlock.

2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/envlock.c: Rename define ENVLOCK_DEDIDCATED_MUTEX
	into ENVLOCK_DEDICATED_MUTEX (Typo).

2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/serdbg/serdbg.h: Add serdbg_init_dbg.
	* libmisc/serdbg/serdbgcnf.h:
	Remove conditional serdbg_init_dbg prototype.

2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/mouse/serial_mouse.c: Make serial_mouse_l_rint static.
	* libfs/src/pipe/pipe.c: Include <rtems/pipe.h> (Missing
	prototypes).
	* libcsupport/src/malloc_sbrk_helpers.c: Make
	malloc_sbrk_initialize, malloc_sbrk_extend_and_allocate static.

2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/monitor/mon-network.c: Include <rtems/monitor.h>.
	* libmisc/monitor/mon-object.c:
	Make rtems_monitor_object_canonical_next_remote,
	rtems_monitor_object_dump_1, rtems_monitor_object_dump_all static.
	* libmisc/monitor/mon-prmisc.c:
	Make rtems_monitor_dump_assoc_bitfield static.
	* libmisc/monitor/mon-symbols.c:
	Make rtems_monitor_symbol_dump_all static.

2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* score/src/schedulercbsattachthread.c,
	score/src/schedulercbsdestroyserver.c,
	score/src/schedulercbsdetachthread.c,
	score/src/schedulercbsgetapprovedbudget.c,
	score/src/schedulercbsgetexecutiontime.c,
	score/src/schedulercbsgetparameters.c,
	score/src/schedulercbsgetremainingbudget.c,
	score/src/schedulercbssetparameters.c:
	Remove checks for server_id < 0 (server_id is unsigned).

2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>
